# bird_repel

./: .gitignore  README.md  pyproject.toml
apps/: bootstrap_camera_setup.py  build_experiment_manifest.py  check_config_readiness.py  evaluate_event_gt.py  evaluate_frame_gt.py  evaluate_run.py  evaluate_tracking_gt.py  evaluate_verification_gt.py  export_adjudication_tasks.py  export_annotation_pack.py  export_canonical_dataset.py  export_replay_from_experiment.py  generate_clip_tasks.py  generate_frame_label_tasks.py  generate_stress_replay.py  index_mp4_corpus.py  render_gt_eval_report.py  run_bird_sahi_focus_suite.py  run_bird_sahi_operating_point_sweep.py  run_data_audit.py  run_experiment_suite.py  run_gt_eval_suite.py  run_live_mock.py  run_live_stream.py  run_method_stress_suite.py  run_offline_replay.py  summarize_annotation_queue.py  validate_annotations.py
common/: angle.py  config.py  events.py  logger.py
configs/: annotation_vocabulary.template.json  live_file_stream.template.json  live_rtsp_stream.template.json  scenario_a.example.json  scenario_b.example.json  scenario_b_dynamic_plugin.example.json  scenario_bird_repel_detector.example.json  scenario_bird_repel_detector.template.json  scenario_bird_sahi_detector.example.json  scenario_bird_sahi_detector.template.json  scenario_bird_sahi_method_bundle.example.json  scenario_bird_sahi_method_bundle.local.json  scenario_bird_sahi_method_bundle.template.json  scenario_bird_sahi_method_bundle_tuned.local.json  scenario_bird_sahi_noconfirm.example.json  scenario_bird_sahi_noconfirm.local.json  (+11 more)
(+80 files in other folders)
