[project]
name = "thesis3"
version = "0.1.0"
description = "Real-data validation platform scaffold for a multi-camera detection and verification system."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
